// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`List > should render a nested list 1`] = `
.circuit-0 {
  font-weight: 400;
  padding-left: 12px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-0 li {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 li:last-child {
  margin-bottom: 0;
}

.circuit-0 ul,
.circuit-0 ol {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 ul:last-child,
.circuit-0 ol:last-child {
  margin-bottom: 0;
}

<ul
  class="circuit-0"
>
  <li>
    First level
  </li>
  <ul
    class="circuit-0"
  >
    <li>
      Second level
    </li>
  </ul>
</ul>
`;

exports[`List > should render the ordered variant 1`] = `
.circuit-0 {
  font-weight: 400;
  padding-left: 12px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-0 li {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 li:last-child {
  margin-bottom: 0;
}

.circuit-0 ul,
.circuit-0 ol {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 ul:last-child,
.circuit-0 ol:last-child {
  margin-bottom: 0;
}

<ol
  class="circuit-0"
>
  <li>
    ordered
  </li>
</ol>
`;

exports[`List > should render the unordered variant 1`] = `
.circuit-0 {
  font-weight: 400;
  padding-left: 12px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-0 li {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 li:last-child {
  margin-bottom: 0;
}

.circuit-0 ul,
.circuit-0 ol {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 ul:last-child,
.circuit-0 ol:last-child {
  margin-bottom: 0;
}

<ul
  class="circuit-0"
>
  <li>
    unordered
  </li>
</ul>
`;

exports[`List > should render with default styles 1`] = `
.circuit-0 {
  font-weight: 400;
  padding-left: 12px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-0 li {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 li:last-child {
  margin-bottom: 0;
}

.circuit-0 ul,
.circuit-0 ol {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 ul:last-child,
.circuit-0 ol:last-child {
  margin-bottom: 0;
}

<ul
  class="circuit-0"
>
  <li>
    List
  </li>
</ul>
`;

exports[`List > should render with size one 1`] = `
.circuit-0 {
  font-weight: 400;
  padding-left: 12px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-0 li {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 li:last-child {
  margin-bottom: 0;
}

.circuit-0 ul,
.circuit-0 ol {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 ul:last-child,
.circuit-0 ol:last-child {
  margin-bottom: 0;
}

<ul
  class="circuit-0"
>
  <li>
    one
  </li>
</ul>
`;

exports[`List > should render with size two 1`] = `
.circuit-0 {
  font-weight: 400;
  padding-left: 12px;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-0 li {
  margin-bottom: 12px;
  margin-left: 4px;
}

.circuit-0 li:last-child {
  margin-bottom: 0;
}

.circuit-0 ul,
.circuit-0 ol {
  margin-bottom: 12px;
  margin-left: 4px;
}

.circuit-0 ul:last-child,
.circuit-0 ol:last-child {
  margin-bottom: 0;
}

<ul
  class="circuit-0"
>
  <li>
    two
  </li>
</ul>
`;
